// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField should render component with custom inputEl 1`] = `
<div
  className="css-aq4c43"
>
  <FormLabel
    width={11}
  >
    Test
  </FormLabel>
  <span>
    Input
  </span>
  <button>
    Ok
  </button>
</div>
`;

exports[`FormField should render component with default inputEl 1`] = `
<div
  className="css-aq4c43"
>
  <FormLabel
    width={11}
  >
    Test
  </FormLabel>
  <input
    className="gf-form-input width-12"
    onChange={[MockFunction]}
    type="text"
    value={10}
  />
</div>
`;
